<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/rlv"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinuar"
            android:layout_width="117dp"
            android:layout_height="37dp"
            android:background="@color/color1"
            android:backgroundTint="@color/color1"
            android:onClick="onClick"
            android:text="@string/next"
            android:textColor="@color/colorStatus"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/uteqlogorecorado" />

    <TextView
        android:id="@+id/revistas"
        style=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="56dp"
        android:text="@string/scientific_magazines"
        android:textAlignment="center"
        android:textColor="@color/colorStatus"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="56dp"
        android:text="@string/bienvenido_welcome_bem_vindo"
        android:textAlignment="center"
        android:textColor="@color/colorStatus"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:text="@string/lenguaje_language_l_ngua"
        android:textAlignment="center"
        android:textColor="@color/colorStatus"
        android:textSize="13sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView5"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/colorPrimary"

        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


</RelativeLayout>